# 3dViewer

./: CMakeLists.txt  main.cpp
src/WrapperSTL/: AnalysisFunctions.cpp  AnalysisFunctions.h  WrapperSTL.cpp  WrapperSTL.h
src/drawing/: DrawStrategy.cpp  DrawStrategy.h
src/global/: global.cpp  global.h
src/glwidget/: glwidget.cpp  glwidget.h
src/mainwindow/: mainwindow.cpp  mainwindow.h
src/modelloader/: common.cpp  common.h  modelloader.cpp  modelloader.h
src/modelloader/glTF/: model_loader_gltf.cpp  model_loader_gltf.h
src/node/: node_common.cpp  node_common.h  node_gltf.cpp  node_gltf.h  node_obj.cpp  node_obj.h  node_stl.cpp  node_stl.h
src/object_wrapper/: object_wrapper.cpp  object_wrapper.h
src/scene/: Scene.h
src/shaders/: shader_program_interface.cpp  shader_program_interface.h
src/shaders/STL/: fragment.txt  geometry.txt
src/shaders/STL_COLORED/: geometry.txt  vertex.txt
src/shaders/STL_MESH/: fragment.txt  vertex.txt
src/shaders/STL_NORMAL_VECTORS/: fragment.txt  geometry.txt  vertex.txt
src/shaders/Scene/Axis/: geometry.txt  vertex.txt
src/shaders/glass/: geometry.txt  vertex.txt
src/widgets/: node_tree.cpp  node_tree.h
